--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" type="" href="css/tailwind.css">
 </head>
-<body>
-    <p class="bg-red-500">test</p>
+<body class="flex flex-col min-h-screen bg-indigo-100">
 
+    <header><%- include('blocks/nav.html'); %></header>
+
+        <main class="flex-grow"><%- include(`pages/${location}.html`); %></main>
+
+    <footer><%- include('blocks/foot.html'); %></footer>
 
 </body>
 </html>
