--- a/views/blocks/foot.html
+++ b/views/blocks/foot.html
@@ -1,3 +1,24 @@
 <div class="w-full px-8 py-2 bg-indigo-700 flex items-center flex-wrap">
-    <a href="">About us</a>
+    
+    <div class="container mx-auto">
+        <div class="w-full flex">
+            <div class="w-1/3">
+                <p>Contact</p>
+
+            </div>
+            <div class="w-1/3 flex items-center justify-center">
+                <div class="rounded-full">
+                    <img src="svg/social/002-twitter.svg" class="w-16 rounded-full" alt="">
+                </div>
+                <div class="rounded-full">
+                    <img src="svg/social/001-instagram.svg" class="w-16 rounded-full" alt="">
+                </div>
+                
+                <img src="svg/social/003-facebook.svg" class="w-16 bg-white" alt="">
+            </div>
+            <div class="w-1/3">
+                c
+            </div>
+        </div>
+    </div>
 </div>
