--- a/views/pages/landing.html
+++ b/views/pages/landing.html
@@ -1,47 +1,105 @@
-<div class="w-full bg-indigo-700 px-64">
-    <div class="bg-indigo-100 rounded-full flex w-full  tracking-wider px-16">
-        
-        <div class="transform skew-x-12 z-20 shadow-lg transform scale-125 bg-indigo-900 w-1/3 text-center text-indigo-100 uppercase font-medium text-2xl py-2">
-            <span style="--transform-skew-x: -12deg !important;">Home</span>
-        </div>
-        <div class="rounded-full w-1/3 text-center text-indigo-900 uppercase font-medium text-2xl py-2">
-            Shop
-        </div>
-        <div class="rounded-full w-1/3 text-center text-indigo-900 uppercase font-medium text-2xl py-2">
-            More
-        </div>
-    </div>
-</div>
+
 <div class="static h-64">
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="z-index: -10;" class="absolute"><path fill="#4C51BF" fill-opacity="1" d="M0,64L1440,192L1440,0L0,0Z"></path></svg>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="z-index: -11;" class="absolute"><path fill="#A3BFFA" fill-opacity="1" d="M0,192L1440,32L1440,0L0,0Z"></path></svg>
 </div>
 
-<div class="container mx-auto">
 
-<div class="">
-    <div class="w-full yo h-48 text-center flex items-center justify-center bg-opacity-25 rounded-lg static">
+<div class="container mx-auto mb-24">
+
+    <div class="w-full">
+        <div class="w-full yo h-48 text-center flex items-center justify-center bg-opacity-25 rounded-lg static">
+            
+            <img src="svg/diamond.svg" alt="" class="-rotate-45 rounded-lg h-48 -translate-x-20 translate-y-20  transform  left-0 absolute">
+            <p class="text-indigo-100 text-6xl font-bold uppercase tracking-widest absolute"> We offer quality</p>
+            <img src="svg/diamond_gold.svg" alt="" class="rotate-45 rounded-lg h-48 translate-x-20 translate-y-20  transform  right-0 absolute">
+        </div>
+
+    </div>
+</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="absolute"><path fill="#1a202c" fill-opacity="1" d="M0,32L1440,192L1440,0L0,0Z"></path></svg>
+    <div class="w-full mt-16 flex items-center justify-center">
         
-        <img src="img/photo-1522968439036-e6338d0ed84f.jpg" alt="" class="rounded-lg h-48 -translate-x-16 translate-y-16  transform  left-0 absolute">
-        <p class="text-indigo-100 text-6xl font-bold uppercase tracking-widest absolute"> We offer quality</p>
-       
+        <div class="shadow-md w-dull p-12 text-indigo-100 stuff py-64">
+            
+            <div class="flex justify-center items-center py-4">
+                <button class="bg-gray-200 bg-opacity-50 px-4 py-6 w-1/3 rounded-full shadow-xl border-b-2 border-indigo-500 font-semibold text-4xl uppercase">SHOP</button>
+            </div>
+            <p class="font-semibold tracking-wider text-3xl">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            
+        </div>  
     </div>
 
-</div>
+    <div class="w-full mt-16 flex items-center justify-center">
+        <div class=" bg-gray-900 w-3/4 p-12 text-indigo-100 stuff2 rounded-bl-full rounded-tr-full rounded-br-full">
+            
+            <p class="font-semibold tracking-wider text-3xl">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            
+        </div>
+    </div>
 
-</div>
+
 
 
 
 <style>
+::-moz-selection { background: #68d391; }
+::selection { background: #68d391; }
 
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    /*-webkit-border-radius: 10px;
+    border-radius: 10px;*/
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    /*-webkit-border-radius: 10px;
+    border-radius: 10px;*/
+    background: rgba(255,0,0,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4); 
+}
+
+.stuff{
+    background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.3)
+    ),url(img/photo-1475179593777-bd12fd56b85d.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-attachment: fixed;
+}
+.stuff2{
+    background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url(svg/wave2.svg),url(img/photo-1588892023905-f99aee940772.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+}
 .yo{
     background: 
     linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
     ),
-    url(img/photo-1434056886845-dac89ffe9b56.jpg);
+    url(img/photo-1523170335258-f5ed11844a49.jpg);
 
 
     background-repeat: no-repeat;
