--- a/views/pages/landing.html
+++ b/views/pages/landing.html
@@ -5,14 +5,14 @@
 </div>
 
 
-<div class="container mx-auto mb-24">
+<div class="container mx-auto mb-32">
 
     <div class="w-full">
         <div class="w-full yo h-48 text-center flex items-center justify-center bg-opacity-25 rounded-lg static">
             
-            <img src="svg/diamond.svg" alt="" class="-rotate-45 rounded-lg h-48 -translate-x-20 translate-y-20  transform  left-0 absolute">
+            <img src="img/photo-1483118714900-540cf339fd46.jpg" alt="" class="rounded-lg h-48 -translate-x-20 -translate-y-20  transform  left-0 absolute">
             <p class="text-indigo-100 text-6xl font-bold uppercase tracking-widest absolute"> We offer quality</p>
-            <img src="svg/diamond_gold.svg" alt="" class="rotate-45 rounded-lg h-48 translate-x-20 translate-y-20  transform  right-0 absolute">
+            <img src="img/photo-1434056886845-dac89ffe9b56.jpg" alt="" class="rounded-lg h-48 translate-x-20 translate-y-20  transform  right-0 absolute">
         </div>
 
     </div>
@@ -32,15 +32,48 @@
         </div>  
     </div>
 
-    <div class="w-full mt-16 flex items-center justify-center">
-        <div class=" bg-gray-900 w-3/4 p-12 text-indigo-100 stuff2 rounded-bl-full rounded-tr-full rounded-br-full">
-            
-            <p class="font-semibold tracking-wider text-3xl">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            
+
+
+
+
+
+<div class="py-8 container mx-auto">
+    
+        <div class="flex bg-indigo-100 rounded-lg specialwave">
+            <div  class="py-6 transform -translate-x-16">
+                <object data="img/photo-1522968439036-e6338d0ed84f.jpg" type="" class="w-56 inline rounded-lg"></object>
+            </div>
+            <div class="p-6">
+                <p class="uppercase font-semibold text-2xl">Lorem ipsum dolor</p>
+                <p class="font-mono text-indigo-100" style="mix-blend-mode: exclusion;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac egestas ligula. Nulla varius sed risus nec consectetur. Maecenas justo leo, tristique nec dolor et, tristique dictum arcu. Maecenas metus odio, lobortis eu aliquam ut, malesuada eu ipsum. Pellentesque sagittis mi a eros condimentum dapibus. Fusce vitae feugiat massa, a fringilla est. Ut eu sem molestie, tincidunt lorem id, tempus est. Nullam imperdiet malesuada lacus, nec dictum lectus vulputate in. Quisque fringilla libero dictum nunc convallis sagittis. Vestibulum sit amet ipsum urna. In hac habitasse platea dictumst. Aenean sit amet turpis sem. Proin vel varius sem. Morbi pharetra aliquam libero, at porta velit suscipit ut. Vivamus ut laoreet neque.</p>
+                <div class="flex items-center float-right">
+                    <img class="w-12 h-12 rounded-full mr-4" src="img/0.jpg">
+                    <div class="text-sm">
+                      <p class="text-gray-900 leading-none font-semibold">Ivan Moroz</p>
+                      <p class="text-gray-600">May 20</p>
+                    </div>
+                  </div>
+            </div>
         </div>
-    </div>
+    
+        <div class="flex bg-indigo-100 rounded-lg specialwave2">
+
+            <div class="p-6">
+                <p class="uppercase font-semibold text-2xl text-indigo-100" style="mix-blend-mode: exclusion;">Lorem ipsum dolor</p>
+                <p class="font-mono text-indigo-100" style="mix-blend-mode: exclusion;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac egestas ligula. Nulla varius sed risus nec consectetur. Maecenas justo leo, tristique nec dolor et, tristique dictum arcu. Maecenas metus odio, lobortis eu aliquam ut, malesuada eu ipsum. Pellentesque sagittis mi a eros condimentum dapibus. Fusce vitae feugiat massa, a fringilla est. Ut eu sem molestie, tincidunt lorem id, tempus est. Nullam imperdiet malesuada lacus, nec dictum lectus vulputate in. Quisque fringilla libero dictum nunc convallis sagittis. Vestibulum sit amet ipsum urna. In hac habitasse platea dictumst. Aenean sit amet turpis sem. Proin vel varius sem. Morbi pharetra aliquam libero, at porta velit suscipit ut. Vivamus ut laoreet neque.</p>
+                <div class="flex items-center float-right">
+                    <img class="w-12 h-12 rounded-full mr-4" src="img/0.jpg">
+                    <div class="text-sm">
+                      <p class="text-gray-900 leading-none font-semibold">Ivan Moroz</p>
+                      <p class="text-gray-600">May 20</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+</div>
+
+
 
 
 
@@ -90,6 +123,16 @@
       rgba(0, 0, 0, 0.5)
     ),
     url(svg/wave2.svg),url(img/photo-1588892023905-f99aee940772.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+.specialwave{
+    background-image: url(svg/wave.svg);
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+.specialwave2{
+    background-image: url(svg/wave2.svg);
     background-repeat: no-repeat;
     background-size:cover;
 }
