--- a/views/blocks/foot.html
+++ b/views/blocks/foot.html
@@ -1,22 +1,24 @@
-<div class="w-full px-8 py-2 bg-indigo-700 flex items-center flex-wrap">
-    
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#4c51bf" fill-opacity="1" d="M0,256L120,250.7C240,245,480,235,720,218.7C960,203,1200,181,1320,170.7L1440,160L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
+<div class="w-full px-8 py-2 bg-indigo-700 flex items-center flex-wrap text-indigo-100">
     <div class="container mx-auto">
-        <div class="w-full flex">
+        <div class="w-full flex pb-4">
             <div class="w-1/3">
                 <p>Contact</p>
 
             </div>
             <div class="w-1/3 flex items-center justify-center">
-                <div class="rounded-full">
-                    <img src="svg/social/002-twitter.svg" class="w-16 rounded-full" alt="">
+                <div class="px-2">
+                    <img src="svg/social/002-twitter.svg" class="w-16" alt="">
                 </div>
-                <div class="rounded-full">
-                    <img src="svg/social/001-instagram.svg" class="w-16 rounded-full" alt="">
+                <div class="px-2">
+                    <img src="svg/social/001-instagram.svg" class="w-16" alt="">
+                </div>
+                <div class="px-2">
+                    <img src="svg/social/003-facebook.svg" class="w-16" alt="">
                 </div>
                 
-                <img src="svg/social/003-facebook.svg" class="w-16 bg-white" alt="">
             </div>
-            <div class="w-1/3">
+            <div class="w-1/3 px-2">
                 c
             </div>
         </div>
