--- a/views/pages/landing.html
+++ b/views/pages/landing.html
@@ -1,5 +1,5 @@
 
-<div class="static h-64">
+<div class="static h-32 xl:h-64">
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="z-index: -10;" class="absolute"><path fill="#4C51BF" fill-opacity="1" d="M0,64L1440,192L1440,0L0,0Z"></path></svg>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="z-index: -11;" class="absolute"><path fill="#A3BFFA" fill-opacity="1" d="M0,192L1440,32L1440,0L0,0Z"></path></svg>
 </div>
@@ -10,25 +10,24 @@
     <div class="w-full">
         <div class="w-full yo h-48 text-center flex items-center justify-center bg-opacity-25 rounded-lg static">
             
-            <img src="img/photo-1483118714900-540cf339fd46.jpg" alt="" class="rounded-lg h-48 -translate-x-20 -translate-y-20  transform  left-0 absolute">
-            <p class="text-indigo-100 text-6xl font-bold uppercase tracking-widest absolute"> We offer quality</p>
-            <img src="img/photo-1434056886845-dac89ffe9b56.jpg" alt="" class="rounded-lg h-48 translate-x-20 translate-y-20  transform  right-0 absolute">
+            <img src="img/photo-1483118714900-540cf339fd46.jpg" alt="" class="rounded-lg h-48 -translate-x-20 -translate-y-20  transform  left-0 absolute hidden xl:block">
+            <p class="text-indigo-100 text-3xl lg:text-6xl font-bold uppercase tracking-widest absolute"> We offer quality</p>
+            <img src="img/photo-1434056886845-dac89ffe9b56.jpg" alt="" class="rounded-lg h-48 translate-x-20 translate-y-20  transform  right-0 absolute hidden xl:block">
         </div>
 
     </div>
 </div>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="absolute"><path fill="#1a202c" fill-opacity="1" d="M0,32L1440,192L1440,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="absolute hidden xl:block"><path fill="#1a202c" fill-opacity="1" d="M0,32L1440,192L1440,0L0,0Z"></path></svg>
     <div class="w-full mt-16 flex items-center justify-center">
         
-        <div class="shadow-md w-dull p-12 text-indigo-100 stuff py-64">
+        <div class="shadow-md w-dull px-4 xl:p-12 text-indigo-100 stuff xl:py-64">
             
             <div class="flex justify-center items-center py-4">
-                <button class="bg-gray-200 bg-opacity-50 px-4 py-6 w-1/3 rounded-full shadow-xl border-b-2 border-indigo-500 font-semibold text-4xl uppercase">SHOP</button>
+                <button class="bg-gray-200 bg-opacity-50 xl:px-4 py-6 w-full xl:w-1/3 rounded-lg xl:rounded-full shadow-xl border-b-2 border-indigo-500 font-semibold text-4xl uppercase">SHOP</button>
             </div>
-            <p class="font-semibold tracking-wider text-3xl">
+            <p class="font-semibold tracking-wider text-xl xl:text-3xl pb-8 xl:pb-0">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
-            
         </div>  
     </div>
 
@@ -37,40 +36,23 @@
 
 
 
-<div class="py-8 container mx-auto">
-    
+<div class="py-8 container mx-auto mt-4">
         <div class="flex bg-indigo-100 rounded-lg specialwave">
-            <div  class="py-6 transform -translate-x-16">
+            <div  class="hidden xl:block py-6 transform -translate-x-16 -translate-y-10">
                 <object data="img/photo-1522968439036-e6338d0ed84f.jpg" type="" class="w-56 inline rounded-lg"></object>
             </div>
             <div class="p-6">
                 <p class="uppercase font-semibold text-2xl">Lorem ipsum dolor</p>
-                <p class="font-mono text-indigo-100" style="mix-blend-mode: exclusion;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac egestas ligula. Nulla varius sed risus nec consectetur. Maecenas justo leo, tristique nec dolor et, tristique dictum arcu. Maecenas metus odio, lobortis eu aliquam ut, malesuada eu ipsum. Pellentesque sagittis mi a eros condimentum dapibus. Fusce vitae feugiat massa, a fringilla est. Ut eu sem molestie, tincidunt lorem id, tempus est. Nullam imperdiet malesuada lacus, nec dictum lectus vulputate in. Quisque fringilla libero dictum nunc convallis sagittis. Vestibulum sit amet ipsum urna. In hac habitasse platea dictumst. Aenean sit amet turpis sem. Proin vel varius sem. Morbi pharetra aliquam libero, at porta velit suscipit ut. Vivamus ut laoreet neque.</p>
+                <p class="font-mono text-indigo-100" style="mix-blend-mode: exclusion;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac egestas ligula. Nulla varius sed risus nec consectetur. Maecenas justo leo, tristique nec dolor et, tristique dictum arcu. Maecenas metus odio, lobortis eu aliquam ut, malesuada eu ipsum. Pellentesque sagittis mi a eros condimentum dapibus.</p>
                 <div class="flex items-center float-right">
                     <img class="w-12 h-12 rounded-full mr-4" src="img/0.jpg">
                     <div class="text-sm">
                       <p class="text-gray-900 leading-none font-semibold">Ivan Moroz</p>
                       <p class="text-gray-600">May 20</p>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
-    
-        <div class="flex bg-indigo-100 rounded-lg specialwave2">
-
-            <div class="p-6">
-                <p class="uppercase font-semibold text-2xl text-indigo-100" style="mix-blend-mode: exclusion;">Lorem ipsum dolor</p>
-                <p class="font-mono text-indigo-100" style="mix-blend-mode: exclusion;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac egestas ligula. Nulla varius sed risus nec consectetur. Maecenas justo leo, tristique nec dolor et, tristique dictum arcu. Maecenas metus odio, lobortis eu aliquam ut, malesuada eu ipsum. Pellentesque sagittis mi a eros condimentum dapibus. Fusce vitae feugiat massa, a fringilla est. Ut eu sem molestie, tincidunt lorem id, tempus est. Nullam imperdiet malesuada lacus, nec dictum lectus vulputate in. Quisque fringilla libero dictum nunc convallis sagittis. Vestibulum sit amet ipsum urna. In hac habitasse platea dictumst. Aenean sit amet turpis sem. Proin vel varius sem. Morbi pharetra aliquam libero, at porta velit suscipit ut. Vivamus ut laoreet neque.</p>
-                <div class="flex items-center float-right">
-                    <img class="w-12 h-12 rounded-full mr-4" src="img/0.jpg">
-                    <div class="text-sm">
-                      <p class="text-gray-900 leading-none font-semibold">Ivan Moroz</p>
-                      <p class="text-gray-600">May 20</p>
-                    </div>
-                  </div>
-            </div>
-        </div>
-
 </div>
 
 
@@ -80,31 +62,6 @@
 
 
 <style>
-::-moz-selection { background: #68d391; }
-::selection { background: #68d391; }
-
-/* Let's get this party started */
-::-webkit-scrollbar {
-    width: 12px;
-}
- 
-/* Track */
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    /*-webkit-border-radius: 10px;
-    border-radius: 10px;*/
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    /*-webkit-border-radius: 10px;
-    border-radius: 10px;*/
-    background: rgba(255,0,0,0.8); 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4); 
-}
 
 .stuff{
     background: 
