--- a/views/blocks/foot.html
+++ b/views/blocks/foot.html
@@ -1,25 +1,26 @@
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#4c51bf" fill-opacity="1" d="M0,256L120,250.7C240,245,480,235,720,218.7C960,203,1200,181,1320,170.7L1440,160L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
-<div class="w-full px-8 py-2 bg-indigo-700 flex items-center flex-wrap text-indigo-100">
+<div class="bg-indigo-700">
     <div class="container mx-auto">
-        <div class="w-full flex pb-4">
-            <div class="w-1/3">
-                <p>Contact</p>
-
+        <div class="w-full xl:flex pb-4">
+            <div class="w-full xl:w-1/3 mb-4 xl:mb-0 items-center justify-center flex">
+                <a href="/contact" class="tracking-wider font-semibold rounded-lg border-b-2 border-indigo-500 uppercase text-2xl px-6 py-2 bg-indigo-900 text-indigo-200">Contact</a>
             </div>
-            <div class="w-1/3 flex items-center justify-center">
+            <div class="w-full xl:w-1/3 flex mb-4 xl:mb-0 items-center justify-center">
                 <div class="px-2">
-                    <img src="svg/social/002-twitter.svg" class="w-16" alt="">
+                    <img src="svg/social/002-twitter.svg" class="w-16 rounded-full" alt="">
                 </div>
                 <div class="px-2">
-                    <img src="svg/social/001-instagram.svg" class="w-16" alt="">
+                    <img src="svg/social/001-instagram.svg" class="w-16 rounded-full" alt="">
                 </div>
                 <div class="px-2">
-                    <img src="svg/social/003-facebook.svg" class="w-16" alt="">
+                    <img src="svg/social/003-facebook.svg" class="w-16 rounded-full" alt="">
                 </div>
-                
             </div>
-            <div class="w-1/3 px-2">
-                c
+            <div class="w-full xl:w-1/3 px-2 mb-4 xl:mb-0 items-center justify-center flex">
+                <div>
+                    <input class="bg-transparent border-b-2 px-6 py-2 focus:outline-none border-gray-900 placeholder-indigo-200 text-indigo-200" type="text" placeholder="yourmail@mail.com">
+                    <button class="px-6 py-2 bg-indigo-900 text-indigo-200 rounded-lg">Subscribe</button>
+                </div>
             </div>
         </div>
     </div>
