--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -20,15 +20,20 @@
             <div class="w-full bg-indigo-700">
                 <div class="bg-indigo-100 rounded-full flex w-full  tracking-wider cursor-pointer">
                     
-                    <div class="rounded-full transform z-20 shadow-lg transform scale-125 bg-indigo-900 w-1/3 text-center text-indigo-100 uppercase font-medium text-2xl py-1">
+                    <% const active = 'rounded-full transform z-20 shadow-lg transform scale-125 bg-indigo-900 w-1/3 text-center text-indigo-100 uppercase font-medium text-2xl py-1'; %>
+                    <% const inactive = 'rounded-full w-1/3 text-center text-indigo-900 uppercase font-medium text-2xl py-1';%>
+
+                    <div class="<% if(location == 'landing'){ %><%=active%><% }else{ %><%=inactive%><% } %>">
                         Home
                     </div>
-                    <div class="rounded-full w-1/3 text-center text-indigo-900 uppercase font-medium text-2xl py-1">
+                    <div class="<% if(location == 'shop'){ %><%=active%><% }else{ %><%=inactive%><% } %>">
                         Shop
                     </div>
-                    <div class="rounded-full w-1/3 text-center text-indigo-900 uppercase font-medium text-2xl py-1">
-                        More
+                    <div class="<% if(location == 'about'){ %><%=active%><% }else{ %><%=inactive%><% } %>">
+                        about
                     </div>
+
+
                 </div>
             </div>
         </nav>
