--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="" href="css/tailwind.css">
+    <link rel="stylesheet" type="" href="css/private.css">
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900">
 
