--- a/views/pages/shop.html
+++ b/views/pages/shop.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="w-full pl-3">
-            <div class="w-full p-4 flex">
+            <div class="w-full px-4 py-2 flex">
                 <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/invictawatch_4387_t.jpg" alt="" class="rounded-lg w-40">
@@ -58,7 +58,7 @@
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-24 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" fill-rule="evenodd"></path></svg></div>
                 </div>
             </div>
-            <div class="w-full p-4 flex">
+            <div class="w-full px-4 py-2 flex">
                 <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/7907-15933s.jpg" alt="" class="rounded-lg w-40">
