--- a/views/pages/about.html
+++ b/views/pages/about.html
@@ -3,39 +3,62 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="z-index: -10;" class="absolute"><path fill="#4C51BF" fill-opacity="1" d="M0,64L1440,192L1440,0L0,0Z"></path></svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="z-index: -11;" class="absolute"><path fill="#A3BFFA" fill-opacity="1" d="M0,192L1440,32L1440,0L0,0Z"></path></svg>
     </div>
-<div class="container mx-auto flex">
+<div class="container xl:mx-auto xl:flex">
 
-    <div class="bg-gray-300 w-1/3 p-4 rounded-lg mx-2" style="background-image: url(svg/wave4.svg); background-repeat: no-repeat; background-size:cover;">
+    <div class="w-full xl:w-1/4 p-4 rounded-lg mx-2" style="background-position: top; background-image: url(svg/wave4.svg); background-repeat: no-repeat; background-size:cover;">
         <div class="flex items-center justify-center">
             <img src="img/0.jpg" alt="" class="rounded-full">
         </div>
-        <p class="text-center uppercase font-semibold text-3xl">Ivan Moroz</p>
-        <p class="text-center uppercase font-mono text-xl">Web Developer</p>
+        <p class="text-center uppercase font-semibold text-2xl">Ivan Moroz</p>
+        <p class="text-center uppercase font-mono text-lg">Web Developer</p>
         <div class="flex items-center justify-center  transform translate-y-10">
-            <img src="svg/social/twitter.svg" alt="" class="w-12">
-            <img src="svg/social/instagram.svg" alt="" class="w-12">
+            <img src="svg/social/twitter.svg" alt="" class="w-12 z-10">
+            <img src="svg/social/instagram.svg" alt="" class="w-12 z-10">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="absolute fill-current text-teal-500 duration-300 hover:text-teal-800">
+                <path d="M17.6,-30.4C21.7,-28.2,23.2,-21.2,29.4,-15.3C35.7,-9.5,46.9,-4.7,48.9,1.2C50.9,7.1,43.8,14.1,36,17.4C28.3,20.7,19.9,20.3,13.8,22.9C7.7,25.4,3.8,30.9,-3.2,36.4C-10.2,41.9,-20.4,47.4,-28.1,45.8C-35.9,44.3,-41.3,35.6,-42.8,26.8C-44.3,17.9,-42,9,-40.3,1C-38.6,-7,-37.5,-14,-31.8,-15.6C-26.1,-17.1,-15.7,-13.2,-9.7,-14.4C-3.6,-15.5,-1.8,-21.7,2.5,-26C6.8,-30.3,13.5,-32.7,17.6,-30.4Z" transform="translate(100 100)" />
+              </svg>
         </div>
     </div>
-    <div class="bg-gray-300 w-1/3 p-4 rounded-lg mx-2" style="background-image: url(svg/wave5.svg); background-repeat: no-repeat; background-size:cover;">
+    <div class="w-full xl:w-1/4 p-4 rounded-lg mx-2" style="background-position: top; background-image: url(svg/wave5.svg); background-repeat: no-repeat; background-size:cover;">
         <div class="flex items-center justify-center">
             <img src="img/photo-1578772935936-915c1a4d517e.jpg" alt="" class="rounded-full">
         </div>
-        <p class="text-center uppercase font-semibold text-3xl">Sydney Marie</p>
-        <p class="text-center uppercase font-mono text-xl">Security Staff</p>
+        <p class="text-center uppercase font-semibold text-2xl">Sydney Marie</p>
+        <p class="text-center uppercase font-mono text-lg">Security Staff</p>
         <div class="flex items-center justify-center  transform translate-y-10">
-            <img src="svg/social/twitter.svg" alt="" class="w-12">
-            <img src="svg/social/instagram.svg" alt="" class="w-12">
+            <img src="svg/social/twitter.svg" alt="" class="w-12 z-10">
+            <img src="svg/social/instagram.svg" alt="" class="w-12 z-10">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="absolute fill-current text-pink-500 duration-300 hover:text-pink-800">
+                <path d="M30.3,-49.8C38.8,-47.6,44.9,-38.5,52.9,-29.1C60.9,-19.6,71,-9.8,66.7,-2.5C62.4,4.8,43.8,9.7,34.6,17.2C25.4,24.7,25.7,34.9,21.5,39.9C17.3,44.9,8.7,44.8,1.5,42.2C-5.7,39.6,-11.4,34.6,-19.5,31.8C-27.6,29.1,-38.1,28.5,-47.4,23.6C-56.8,18.7,-65.1,9.3,-71.1,-3.4C-77,-16.2,-80.6,-32.4,-71.3,-37.5C-62,-42.5,-39.8,-36.5,-25.8,-35.5C-11.7,-34.6,-5.9,-38.7,2.5,-43C10.9,-47.4,21.8,-52.1,30.3,-49.8Z" transform="translate(100 100)" />
+              </svg>
         </div>
     </div>
-    <div class="bg-gray-300 w-1/3 p-4 rounded-lg mx-2" style="background-image: url(svg/wave6.svg); background-repeat: no-repeat; background-size:cover;">
+    <div class="w-full xl:w-1/4 p-4 rounded-lg mx-2" style="background-position: top;  background-image: url(svg/wave6.svg); background-repeat: no-repeat; background-size:cover;">
         <div class="flex items-center justify-center">
             <img src="img/photo-1543207564-1271b510019d.jpg" alt="" class="rounded-full">
         </div>
-        <p class="text-center uppercase font-semibold text-3xl">Jhoanna Albert</p>
-        <p class="text-center uppercase font-mono text-xl">Product Manager</p>
+        <p class="text-center uppercase font-semibold text-2xl">Jhoanna Marie</p>
+        <p class="text-center uppercase font-mono text-lg">Product Manager</p>
         <div class="flex items-center justify-center  transform translate-y-10">
-            <img src="svg/social/twitter.svg" alt="" class="w-12">
-            <img src="svg/social/instagram.svg" alt="" class="w-12">
+            <img src="svg/social/twitter.svg" alt="" class="w-12 z-10">
+            <img src="svg/social/instagram.svg" alt="" class="w-12 z-10">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="absolute fill-current text-pink-500 duration-300 hover:text-pink-800">
+                <path d="M24.1,-31.2C37.2,-34.2,57.8,-39.8,59.7,-35C61.6,-30.2,44.6,-15.1,40.9,-2.1C37.2,10.8,46.8,21.7,46.2,28.7C45.6,35.7,35,38.9,25.6,34.7C16.2,30.5,8.1,18.9,-0.1,19.1C-8.3,19.2,-16.6,31.2,-23.5,34C-30.3,36.7,-35.7,30.2,-42.8,23C-49.8,15.8,-58.4,7.9,-66,-4.4C-73.5,-16.6,-80,-33.3,-71.8,-38.4C-63.6,-43.6,-40.8,-37.3,-26.4,-33.5C-12,-29.7,-6,-28.4,-0.2,-28C5.5,-27.6,11,-28.1,24.1,-31.2Z" transform="translate(100 100)" />
+              </svg>
+        </div>
+    </div>
+    <div class="w-full xl:w-1/4 p-4 rounded-lg mx-2" style="background-position: top;  background-image: url(svg/wave7.svg); background-repeat: no-repeat; background-size:cover;">
+        <div class="flex items-center justify-center">
+            <img src="img/fb6ba443-0674-4fdb-8dbc-e58625fc8821.jpg" alt="" class="rounded-full">
+        </div>
+        <p class="text-center uppercase font-semibold text-2xl">Joao Filipe</p>
+        <p class="text-center uppercase font-mono text-lg">Manager</p>
+        <div class="flex items-center justify-center  transform translate-y-10">
+            <img src="svg/social/twitter.svg" alt="" class="w-12 z-10">
+            <img src="svg/social/instagram.svg" alt="" class="w-12 z-10">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="absolute fill-current text-teal-500 duration-300 hover:text-teal-800">
+                <path d="M38.8,-56.9C51.3,-60.1,62.9,-51.6,61.2,-40.1C59.5,-28.7,44.5,-14.3,46,0.9C47.5,16.1,65.5,32.1,65.4,40.6C65.4,49,47.3,49.8,33.4,52C19.4,54.3,9.7,58,3.6,51.7C-2.5,45.5,-4.9,29.1,-14.4,24.3C-23.9,19.5,-40.5,26.2,-54.2,24.1C-67.9,22,-78.8,11,-72,3.9C-65.3,-3.2,-40.9,-6.4,-29.9,-13.2C-19,-20.1,-21.4,-30.6,-18.6,-33C-15.8,-35.5,-7.9,-29.7,2.6,-34.3C13.2,-38.9,26.4,-53.8,38.8,-56.9Z" transform="translate(100 100)" />
+            </svg>
         </div>
     </div>
 </div>
