--- a/views/blocks/foot.html
+++ b/views/blocks/foot.html
@@ -7,13 +7,10 @@
             </div>
             <div class="w-full xl:w-1/3 flex mb-4 xl:mb-0 items-center justify-center">
                 <div class="px-2">
-                    <img src="svg/social/002-twitter.svg" class="w-16 rounded-full" alt="">
+                    <img src="svg/social/twitter.svg" class="w-16 rounded-full" alt="">
                 </div>
                 <div class="px-2">
-                    <img src="svg/social/001-instagram.svg" class="w-16 rounded-full" alt="">
-                </div>
-                <div class="px-2">
-                    <img src="svg/social/003-facebook.svg" class="w-16 rounded-full" alt="">
+                    <img src="svg/social/youtube.svg" class="w-16 rounded-full" alt="">
                 </div>
             </div>
             <div class="w-full xl:w-1/3 px-2 mb-4 xl:mb-0 items-center justify-center flex">
