--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="" href="css/tailwind.css">
     <link rel="stylesheet" type="" href="css/private.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900">
 
