--- a/views/pages/shop.html
+++ b/views/pages/shop.html
@@ -3,7 +3,11 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="z-index: -11;" class="absolute"><path fill="#A3BFFA" fill-opacity="1" d="M0,192L1440,32L1440,0L0,0Z"></path></svg>
 </div>
 <style>
-
+body{
+    background-image: url(img/photo-1576053139778-7e32f2ae3cfd.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+}
 </style>
 
 <div class="container mx-auto mt-8 bg-indigo-200 rounded-lg p-8">
@@ -12,7 +16,7 @@
     </div>
     <div class="w-full flex mt-8 px-8">
         <div class="w-48">
-            <div class="h-full bg-indigo-700 rounded-lg" style="background-image: url(svg/wave3.svg); background-repeat: no-repeat; background-size:cover;">
+            <div class="h-full bg-indigo-700 rounded-lg" style="background-image: url(svg/wave3.svg); background-repeat: no-repeat; background-size:cover; ">
                 <div class="mb-2 text-indigo-100 rounded-lg bg-indigo-700 text-center uppercase py-2 font-semibold font-mono">
                     rings
                 </div>
@@ -21,7 +25,7 @@
                 </div>
                 <div class="relative mb-2 text-indigo-100 rounded-lg bg-indigo-700 text-center uppercase py-2 font-semibold font-mono">
                     jewelry
-                    <div class="px-4 absolute bg-green-500 transform -translate-y-6 -translate-x-6 text-indigo-100">new</div>
+                    <div class="rounded-lg border-2 border-indigo-700 px-4 absolute bg-green-500 transform -translate-y-6 -translate-x-6 text-indigo-100">new</div>
                 </div>
                 <div class="mb-2 text-indigo-100 rounded-lg bg-indigo-700 text-center uppercase py-2 font-semibold font-mono">
                     Others
@@ -29,8 +33,12 @@
             </div>
         </div>
         <div class="w-full pl-3">
+            <div class="bg-indigo-700 rounded-full flex items-center justify-center">
+                <div class="mx-1 border border-indigo-700 bg-indigo-200 px-2 text-indigo-700  rounded-full font-semibold font-mono"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z" clip-rule="evenodd" fill-rule="evenodd"></path></svg> Order by Price</div>
+                <div class="mx-1 border border-indigo-700 bg-indigo-200 px-2 text-indigo-700  rounded-full font-semibold font-mono"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" fill-rule="evenodd"></path></svg> Order by Date</div>
+            </div>
             <div class="w-full px-4 py-2 flex">
-                <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
+                <div class="hover:scale-105 transform duration-700 bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/invictawatch_4387_t.jpg" alt="" class="rounded-lg w-40">
                     </div>
@@ -39,7 +47,7 @@
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-48 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg></div>
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-24 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" fill-rule="evenodd"></path></svg></div>
                 </div>
-                <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
+                <div class="hover:scale-105 transform duration-700 bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/invictawatch_3951_t.jpg" alt="" class="rounded-lg w-40">
                     </div>
@@ -48,7 +56,7 @@
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-48 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg></div>
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-24 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" fill-rule="evenodd"></path></svg></div>
                 </div>
-                <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
+                <div class="hover:scale-105 transform duration-700 bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/invictawatch_11000_t.jpg" alt="" class="rounded-lg w-40">
                     </div>
@@ -59,7 +67,7 @@
                 </div>
             </div>
             <div class="w-full px-4 py-2 flex">
-                <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
+                <div class="hover:scale-105 transform duration-700 bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/7907-15933s.jpg" alt="" class="rounded-lg w-40">
                     </div>
@@ -68,7 +76,7 @@
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-48 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg></div>
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-24 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" fill-rule="evenodd"></path></svg></div>
                 </div>
-                <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
+                <div class="hover:scale-105 transform duration-700 bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/invictawatch_3949_t.jpg" alt="" class="rounded-lg w-40">
                     </div>
@@ -77,7 +85,7 @@
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-48 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg></div>
                     <div class="cursor-pointer hover:scale-125 duration-500 -translate-x-4 -translate-y-24 shadow-lg transform bg-yellow-600 p-2 absolute right-0  text-indigo-100 font-semibold rounded-full flex items-center justify-center"><svg fill="currentColor" viewBox="0 0 20 20" class="w-6 inline"><path d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" fill-rule="evenodd"></path></svg></div>
                 </div>
-                <div class="bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
+                <div class="hover:scale-105 transform duration-700 bg-white p-4 rounded-lg w-1/3 shadow-lg font-light relative mx-3">
                     <div class="flex justify-center items-center">
                         <img src="img/8216-15879s.jpg" alt="" class="rounded-lg w-40">
                     </div>
