--- a/views/blocks/foot.html
+++ b/views/blocks/foot.html
@@ -3,14 +3,14 @@
     <div class="container mx-auto">
         <div class="w-full xl:flex pb-4">
             <div class="w-full xl:w-1/3 mb-4 xl:mb-0 items-center justify-center flex">
-                <a href="/contact" class="tracking-wider font-semibold rounded-lg border-b-2 border-indigo-500 uppercase text-2xl px-6 py-2 bg-indigo-900 text-indigo-200">Contact</a>
+                <a href="/contact" class="hover:scale-110 duration-200 transform tracking-wider font-semibold rounded-lg border-b-2 border-indigo-500 uppercase text-2xl px-6 py-2 bg-indigo-900 text-indigo-200">Contact</a>
             </div>
             <div class="w-full xl:w-1/3 flex mb-4 xl:mb-0 items-center justify-center">
                 <div class="px-2">
-                    <img src="svg/social/twitter.svg" class="w-16 rounded-full" alt="">
+                    <img src="svg/social/twitter.svg" class="w-16 rounded-full hover:-translate-y-4 transform duration-150 cursor-pointer" alt="">
                 </div>
                 <div class="px-2">
-                    <img src="svg/social/youtube.svg" class="w-16 rounded-full" alt="">
+                    <img src="svg/social/youtube.svg" class="w-16 rounded-full hover:-translate-y-4 transform duration-150 cursor-pointer" alt="">
                 </div>
             </div>
             <div class="w-full xl:w-1/3 px-2 mb-4 xl:mb-0 items-center justify-center flex">
